deployment/minecraft/autumn-land/ingressRoute.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: autumn-land
  namespace: minecraft
spec:
  entryPoints:
    - minecraft
  routes:
    - match: HostSNI(`*`) # HostSNI(`minecraft.autumnbarre.ca`) || HostSNI(`minecraft.local`)
      services:
        - name: autumn-land-minecraft
          port: 25565
#    - match: HostSNI(`*`) # HostSNI(`minecraft-rcon.local`)
#      services:
#        - name: autumn-land-minecraft-rcon
#          port: 25575
#  tls: {}
